--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "split-transform-stream": "~0.1.1"
   },
   "devDependencies": {
-    "proxyquire": "~1.0.0",
-    "should": "~3.3.2",
-    "mocha": "~1.19.0"
+    "alessioalex-standard": "^1.1.0",
+    "husky": "^0.11.3",
+    "mocha": "^1.19.0",
+    "should": "^3.3.2"
   },
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "lint": "alessioalex-standard",
+    "precommit": "npm run lint && npm test"
   },
   "repository": {
     "type": "git",
